feat(product): associate uploaded images by imageIds and remove imageUrl field