@@ -9,10 +9,12 @@ import com.lichenghsu.petshop.repository.ImageRepository;
 import com.lichenghsu.petshop.repository.TagRepository;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import org.hibernate.Hibernate;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -25,7 +27,7 @@ public class ProductService {
     private final CategoryRepository categoryRepository;
     private final TagRepository tagRepository;
 
-
+    @Transactional
     public List<ProductResponse> findAll() {
         return productRepository.findAll().stream()
                 .map(this::mapToResponse)
@@ -56,6 +58,8 @@ public class ProductService {
         if (request.getTagIds() != null && !request.getTagIds().isEmpty()) {
             List<Tag> tags = tagRepository.findAllById(request.getTagIds());
             product.setTags(new HashSet<>(tags));
+        } else {
+            product.setTags(Collections.emptySet()); // 防止 nullPointer
         }
 
         // 圖片關聯
@@ -69,26 +73,89 @@ public class ProductService {
                         pi.setImage(image);
                         pi.setProduct(product);
                         return pi;
-                    }).collect(Collectors.toList());
+                    })
+                    .collect(Collectors.toList());
         }
-        product.setImages(productImages);
+        product.setImages(productImages); // 即使為空也應設定，否則預設為 null
 
         return mapToResponse(productRepository.save(product));
     }
 
+    @Transactional
+    public ProductResponse update(Long id, ProductRequest request) {
+        Product product = productRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Product not found: " + id));
+
+        product.setName(request.getName());
+        product.setDescription(request.getDescription());
+        product.setPrice(request.getPrice());
+
+        // 分類
+        if (request.getCategoryId() != null) {
+            Category category = categoryRepository.findById(request.getCategoryId())
+                    .orElseThrow(() -> new RuntimeException("Category not found: " + request.getCategoryId()));
+            product.setCategory(category);
+        }
+
+        // 標籤
+        if (request.getTagIds() != null) {
+            List<Tag> tags = tagRepository.findAllById(request.getTagIds());
+            product.setTags(new HashSet<>(tags));
+        } else {
+            product.setTags(Collections.emptySet());
+        }
+
+        // 圖片
+        List<ProductImage> productImages = new ArrayList<>();
+
+        if (request.getImageIds() != null) {
+            List<Long> incomingIds = request.getImageIds();
+
+            // 找出目前圖片 ID
+            List<Long> currentIds = product.getImages().stream()
+                    .map(img -> img.getImage().getId())
+                    .toList();
+
+            // 若不同，才進行更新
+            if (!new HashSet<>(incomingIds).equals(new HashSet<>(currentIds))) {
+                List<ProductImage> newImages = incomingIds.stream()
+                        .map(imageId -> {
+                            Image image = imageRepository.findById(imageId)
+                                    .orElseThrow(() -> new RuntimeException("Image not found: " + imageId));
+                            ProductImage pi = new ProductImage();
+                            pi.setImage(image);
+                            pi.setProduct(product);
+                            return pi;
+                        })
+                        .collect(Collectors.toList());
+
+                product.setImages(newImages);
+            }
+        }
+
+
+        Hibernate.initialize(product.getImages());
+        Hibernate.initialize(product.getTags());
+
+        return mapToResponse(productRepository.save(product));
+    }
 
     public void delete(Long id) {
         productRepository.deleteById(id);
     }
 
     private ProductResponse mapToResponse(Product product) {
-        List<String> imageUrls = product.getImages().stream()
-                .map(ProductImage::getImage)
-                .map(Image::getUrl)
-                .toList();
+
+        List<Long> imageIds = product.getImages().stream()
+                .map(pi -> pi.getImage().getId())
+                .collect(Collectors.toList());
 
         List<String> tagNames = product.getTags().stream()
                 .map(Tag::getName)
+                .toList();
+
+        List<Long> tagIds = product.getTags().stream()
+                .map(Tag::getId)
                 .toList();
 
         return new ProductResponse(
@@ -96,8 +163,10 @@ public class ProductService {
                 product.getName(),
                 product.getDescription(),
                 product.getPrice(),
-                imageUrls,
-                product.getCategory() != null ? product.getCategory().getName() : null,
+                imageIds,
+                product.getCategory().getId(),
+                product.getCategory().getName(),
+                tagIds,
                 tagNames
         );
     }
